<resources>
    <string name="app_name">分红全球购</string>
    <string name="WX_APP_ID">wx29d0b39224869fe3</string>
    <string name="app_concept">购全球，享分红</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>
    <string name="network_err">服务器连接失败,请检查网络</string>
    <string name="network_time_out">请求超时</string>
    <string name="invalid_data">数据格式不正确</string>
    <string name="user_cancel">取消请求</string>
    <string name="tab_cart">购物袋</string>
    <string name="tab_home">首页</string>
    <string name="btns_signin">签到</string>
    <string name="btns_draw">积分抽奖</string>
    <string name="btns_bonus">话费红包</string>
    <string name="btns_act">主题馆</string>
    <string name="btns_groupbuying">全球嗨团</string>
    <string name="btns_global">全球购</string>
    <string name="btns_help">微学院</string>
    <string name="btns_microshop">开微店</string>
    <string name="btns_merchant">商家入驻</string>
    <string name="goods_conllect">收藏宝贝</string>
    <string name="stores_conllect">收藏店铺</string>
    <string name="store_detail">店铺详情</string>
    <string name="microshop_conllect">收藏微店</string>
    <string name="microshop">我的微店</string>
    <string name="history">我的足迹</string>
    <string name="to_pay">待付款</string>
    <string name="to_release">待发货</string>
    <string name="to_delivery">待收货</string>
    <string name="to_evaluate">待评价</string>
    <string name="customer_service">退款/售后</string>
    <string name="customer_service_ing">售后申请处理中</string>
    <string name="orders">我的订单</string>
    <string name="preview_orders">查看全部订单</string>
    <string name="income">我的钱包</string>
    <string name="preview_income">查看全部资产</string>
    <string name="balance">我的余额</string>
    <string name="money_from_microshop">奖金收入</string>
    <string name="money_of_microshop">我的奖金</string>
    <string name="deposit">余额提现</string>
    <string name="do_deposit">提现</string>
    <string name="deposit_dtl">提现明细</string>
    <string name="detail">明细</string>
    <string name="fmt_deposit_amount">可提现金额：%1$s</string>
    <string name="tips_deposit_pwd">没有提现密码?</string>
    <string name="tips_pay_pwd">忘记支付密码?</string>
    <string name="hint_deposit_amount">请输入提现金额</string>
    <string name="hint_deposit_pwd">请输入提现密码</string>
    <string name="hint_pay_pwd">请输入支付密码</string>
    <string name="title_pay_pwd">输入支付密码</string>
    <string name="deposit_submit">确认提现</string>
    <string name="pay_tips_1">温馨提示:分红全球购支付密码与提现密码一致.</string>
    <string name="add_a_bankcard">添加新银行卡</string>
    <string name="bankcard">银行卡</string>
    <string name="bankcard_list">银行卡列表</string>
    <string name="select_a_bankcard">请选择银行卡</string>
    <string name="select_a_bank">请选择开户行</string>
    <string name="bankuser_info">持卡人信息</string>
    <string name="hint_bankuser">请输入持卡人姓名</string>
    <string name="tips_bankuser">持卡人姓名不能为空</string>
    <string name="hint_idcard">请输入身份证号</string>
    <string name="tips_idcard">身份证号格式不正确</string>
    <string name="bankinfo">银行卡信息</string>
    <string name="hint_bankcardnum">请输入银行卡号</string>
    <string name="hint_alipay">请输入支付宝账号</string>
    <string name="tips_alipay">支付宝账号格式不正确</string>
    <string name="tips_bankcardnum">银行卡号格式不正确</string>
    <string name="submit">确认</string>
    <string name="new_bankcard">新建银行卡</string>
    <string name="edit_bankcard">编辑银行卡</string>
    <string name="tips_del_bankcard">您确定删除银行卡？</string>
    <string name="fmt_setpwd_phone">我们将发送验证码至：%1$s</string>
    <string name="apaypwd">提现密码</string>
    <string name="title_paypwd">设置提现密码</string>
    <string name="hint_input_paypwd">请输入提现密码</string>
    <string name="hint_cfrm_paypwd">请确认提现密码</string>
    <string name="hint_paypwd_limit">提现密码不能小于6位</string>
    <string name="seller_out_of_line">卖家不在线，请稍后联系</string>
    <string name="points">我的积分</string>
    <string name="points_dtl">积分明细</string>
    <string name="coupon">优惠券</string>
    <string name="coupon_list">我的优惠券</string>
    <string name="address_edit">地址管理</string>
    <string name="def_addr">[默认]</string>
    <string name="team">我的粉丝</string>
    <string name="shares">我的推广</string>
    <string name="vistor_num">访问次数：%1$d次</string>
    <string name="shareapp">邀请合伙人</string>
    <string name="default_filter">综合</string>
    <string name="salesnum">销量</string>
    <string name="price">价格</string>
    <string name="popular">人气</string>
    <string name="search_history">搜索历史</string>
    <string name="clear">清空记录</string>
    <string name="goods">商品</string>
    <string name="details">详情</string>
    <string name="goods_details">商品详情</string>
    <string name="evaluate">评价</string>
    <string name="buy_now">立即购买</string>
    <string name="add_2_cart">加入购物袋</string>
    <string name="lbl_sale_stop">即将发售</string>
    <string name="account">账户</string>
    <string name="password">登录密码</string>
    <string name="lose_password">忘记密码？</string>
    <string name="sign_in">快速注册</string>
    <string name="other_way">其他方式登录</string>
    <string name="login">登录</string>
    <string name="logining">正在登录</string>
    <string name="login_success">登录成功</string>
    <string name="login_failed">登录失败</string>
    <string name="dlg_title">温馨提示</string>
    <string name="hint_login">请先登录</string>
    <string name="tips_login">请先登录分红全球购</string>
    <string name="tips_input_phoneNum">手机号码格式不正确</string>
    <string name="no_phoneNum">您还没有绑定手机,请绑定手机号后再试!</string>
    <string name="hint_intput_loginpwd">请输入登录密码</string>
    <string name="hint_intput_pwd_again">请再次输入密码</string>
    <string name="hint_confirm_loginpwd">请确认登录密码</string>
    <string name="title_setloginpwd">设置密码</string>
    <string name="agree">\t同意</string>
    <string name="ignore_version">\t忽略该版本</string>
    <string name="user_profile_agreement">分红全球购注册协议</string>
    <string name="register_by_phone">手机号快速注册</string>
    <string name="register_fail">注册失败</string>
    <string name="register_success">注册成功</string>
    <string name="get_phonecode_success">验证码发送成功,请注意查收</string>
    <string name="get_phonecode_error">验证码发送失败,请稍后重试</string>
    <string name="pwd_not_equal">两次输入的密码不一致</string>
    <string name="phonecode_first">请先获取验证码</string>
    <string name="doing">亲,等会儿~</string>
    <string name="updating">正在更新数据</string>
    <string name="update_success">更新成功</string>
    <string name="deposit_requesting">正在提交申请</string>
    <string name="setpwd_requesting">正在重置密码</string>
    <string name="resetpwd_ok">密码修改成功</string>
    <string name="op_error">请求失败,请稍后重试</string>
    <string name="op_error_do_again">你的网络不给力哦~</string>
    <string name="download_error">下载失败,请稍后重试</string>
    <string name="op_success">操作成功</string>
    <string name="delete_success">删除成功</string>
    <string name="paypwd_op_success">提现密码修改成功</string>
    <string name="op_cancel">取消操作</string>
    <string name="add_success">添加成功</string>
    <string name="add_error">添加失败</string>
    <string name="search">搜索</string>
    <string name="hot_search">热门搜索：</string>
    <string name="no_more">无更多数据</string>
    <string name="no_data">无数据</string>
    <string name="empty">无</string>
    <string name="phonecode_error">验证码错误</string>
    <string name="phonecode_out_of_date">验证码过期</string>
    <string name="login_error">用户名和密码不匹配</string>
    <string name="login_ban">账号被停用</string>
    <string name="authing">正在授权</string>
    <string name="checking">正在验证</string>
    <string name="phone_has_used">手机号已被注册</string>
    <string name="phone_not_used">手机号未注册,不能找回密码</string>
    <string name="autherror">授权失败</string>
    <string name="auth_cancel">取消授权</string>
    <string name="chk_auth_title">完善登录信息</string>
    <string name="chk_auth_bind">验证绑定</string>
    <string name="telephone_bind">手机号绑定</string>
    <string name="chk_auth_submit">完成绑定</string>
    <string name="hint_input_nick">请给自己设置个昵称吧</string>
    <string name="notice_of_user">请仔细阅读分红全球购用户协议</string>
    <string name="eva_num">%1$d人评价</string>
    <string name="auth_out_of_date">授权已过期,请稍后重试</string>
    <string name="profile">个人资料</string>
    <string name="avatar">头像</string>
    <string name="username">用户名</string>
    <string name="nick">昵称</string>
    <string name="edit_loginpwd">修改登录密码</string>
    <string name="retrieve_loginpwd">找回密码</string>
    <string name="hint_phoneno">请输入手机号</string>
    <string name="hint_phoneno_login">请输入手机号/用户名</string>
    <string name="hint_code">请输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="get_code_again">重新获取</string>
    <string name="next_step">下一步</string>
    <string name="seconds">秒</string>
    <string name="seconds_a">s</string>
    <string name="skip_a">跳过\n</string>
    <string name="skip_end">跳过\n0秒</string>
    <string name="login_signin">登录/注册</string>
    <string name="login_check_account">账号检测中...</string>
    <string name="activity_brands">今日最大牌</string>
    <string name="notice_detail">查看详情</string>
    <string name="fav_goods">收藏商品</string>
    <string name="fav_shop">收藏店铺</string>
    <string name="fav_microshop">收藏微店</string>
    <string name="tips_collect_microshop">不可收藏自己的微店</string>
    <string name="fav_history">我的足迹</string>
    <string name="favorites">我的收藏</string>
    <string name="notice_promotion">降价通知</string>
    <string name="num_buy">X%1$d</string>
    <string name="fmt_microshop_collect">%1$d个人收藏</string>
    <string name="tips_invalid_params">参数不正确</string>
    <string name="yuan">¥</string>
    <string name="yuan_cn">元</string>
    <string name="zero">0</string>
    <string name="minus_zero">-¥0.00</string>
    <string name="evaluate_limit">%1$s/200</string>
    <string name="one">1</string>
    <string name="nine">9</string>
    <string name="buy">购买</string>
    <string name="share">分享</string>
    <string name="share_again">再次分享</string>
    <string name="share4money">点击分享赚钱</string>
    <string name="fmt_sharewin">赚 ¥%1$.2f</string>
    <string name="collect">收藏</string>
    <string name="custom_service">客服</string>
    <string name="collect_plus">+ 收藏</string>
    <string name="collect_minus">已收藏</string>
    <string name="store_collect_already">已收藏 　</string>
    <string name="store">店铺</string>
    <string name="default_order_subject">分红全球购订单支付</string>
    <string name="look_4_dtl">查看\n详情</string>
    <string name="deliver2">配送至：</string>
    <string name="goods_freight">运费：</string>
    <string name="money_freight">运费</string>
    <string name="goods_freight_free">卖家承担运费</string>
    <string name="all_area">全国</string>
    <string name="goods_attr">产品参数</string>
    <string name="pick_spec">规格选择</string>
    <string name="goods_spec">产品规格</string>
    <string name="global_policy">分红全球购保障</string>
    <string name="goods_quality">正品保证</string>
    <string name="cart_empty">购物袋空空的</string>
    <string name="a_time">2015-01-01 11:59</string>
    <string name="calculate">合计：</string>
    <string name="freight_all">(运费：¥%1$s)</string>
    <string name="order_to_pay">去付款</string>
    <string name="order_cancel">取消订单</string>
    <string name="merchantin3_shopname">店铺名称:</string>
    <string name="look_around">随便逛逛</string>
    <string name="look_fav">查看收藏</string>
    <string name="count_num">共%1$d件</string>
    <string name="order_merge">合并付款</string>
    <string name="submit_success">提交成功</string>
    <string name="refund_sub_success_desc1">您的申请我们已经受理，立即反馈给卖家，如果卖家在</string>
    <string name="refund_sub_success_desc3">您也可以主动与卖家协商处理该问题。</string>
    <string name="telephone">电话:</string>
    <string name="QQ">QQ:</string>
    <string name="revocation_apply">撤销申请</string>
    <string name="btn_text_return">返回</string>
    <string name="copy">复制</string>
    <string name="miaosha_coming_desc">抢购中16:00开抢</string>
    <string name="miaosha_time_label">距开始:</string>
    <string name="miaosha_lefttime">01:22:00</string>
    <string name="chars_allow">~!@#$%^&amp;*():";',./\|[]{}?-=+_0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="lbl_jubao">举报</string>
    <string name="lbl_reply">回复</string>
</resources>