<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_of_50"
        android:gravity="right|center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_goods_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/tv_padding"
            android:text="@string/count_num"
            android:textColor="@color/color_66"
            android:textSize="@dimen/sp_of_14" />

        <TextView
            android:id="@+id/tv_order_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:padding="@dimen/tv_padding"
            android:text="@string/calculate"
            android:textColor="@color/color_33"
            android:textSize="@dimen/sp_of_14" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/yuan"
                android:textColor="@color/fh_red"
                android:textSize="@dimen/sp_of_12"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_goods_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/zero"
                android:textColor="@color/fh_red"
                android:textSize="@dimen/sp_of_18"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_goods_freight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/tv_padding"
            android:text="@string/freight_all"
            android:textColor="@color/color_66"
            android:textSize="@dimen/sp_of_14" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_width_1"
        android:background="@color/color_e3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_of_50"
        android:gravity="center|right"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_contact"
            android:layout_width="@dimen/dp_of_80"
            android:layout_height="@dimen/dp_of_30"
            android:background="@drawable/shape_gray66_stroke_corner"
            android:gravity="center"
            android:text="联系卖家"
            android:textColor="@color/color_66"
            android:textSize="@dimen/sp_of_14" />

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="@dimen/dp_of_80"
            android:layout_height="@dimen/dp_of_30"
            android:layout_marginLeft="@dimen/dp_of_10"
            android:background="@drawable/shape_gray66_stroke_corner"
            android:gravity="center"
            android:text="@string/order_cancel"
            android:textColor="@color/color_66"
            android:textSize="@dimen/sp_of_14" />

        <TextView
            android:id="@+id/tv_topay"
            android:layout_width="@dimen/dp_of_80"
            android:layout_height="@dimen/dp_of_30"
            android:layout_marginLeft="@dimen/dp_of_10"
            android:background="@drawable/shape_redstroke_corner"
            android:gravity="center"
            android:text="@string/order_to_pay"
            android:textColor="@color/fh_red"
            android:textSize="@dimen/sp_of_14" />

        <View
            android:layout_width="@dimen/dp_of_10"
            android:layout_height="@dimen/dp_of_1" />
        <TextView
            android:id="@+id/tvRed"
            android:layout_width="@dimen/dp_of_112"
            android:layout_height="@dimen/dp_of_50"
            android:background="@drawable/selector_color_calculate"
            android:gravity="center"
            android:text="@string/order_merge"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_of_17"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>